// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Bar /> should render Bar correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffad2f;
  border-radius: 20px;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 15px;
  -webkit-transition: all 0.25s ease-in;
  transition: all 0.25s ease-in;
}

<span
  className="c0"
  color="orange"
/>
`;

exports[`Test <Container /> should render Container correctly 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #f6f6f6;
  border-radius: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 15px;
}

<div
  className="c0"
  color="orange"
/>
`;
